<resources>
    <string name="app_name">RunRaiser</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_history">History</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_settings">Settings</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="arrow_back">Back</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="logo_icon">logo</string>
    <string name="or">or</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here</string>
    <string name="fullName">Full Name</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in_here">Already have an account? Login here</string>
    <string name="verify_email_message">E-mail not verified. Please verify it to continue.</string>
    <string name="verify_email_btn">I have verified my e-mail</string>
    <string name="resend_email_btn">Resend e-mail</string>
    <string name="resend_email">Enter your email and we\'ll send you a link to get back into your account.</string>
    <string name="reset_password">Reset password</string>
    <string name="remember_me">Remember me</string>
    <string name="start">Start</string>
    <string name="kilometers">Kilometers</string>
    <string name="value_of_one_kilometer">Value of one kilometer (kn)</string>
    <string name="desired_mileage">Desired mileage (km)</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="message_hy">Hello &#x1F44B;</string>
    <string name="message_race">Let\'s race! &#x1F3C3;</string>
    <string name="message_fast">&#x1F680;&#x1F680;&#x1F4AA;&#x1F4AA;</string>
    <string name="message_left">On your left &#x1F440;</string>
    <string name="emoji_running">&#x1F3C3;&#x1F3C3;&#x1F3C3;</string>
    <string name="emoji_strong">Let\'s race! &#x1F4AA;&#x1F44B;</string>
    <string name="emoji">&#x1F3C3;&#x1F4AA;&#x1F44B;</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="average_speed">Average speed</string>
    <string name="money_raised">Money raised</string>
    <string name="goal">Goal</string>
    <string name="speed">Speed</string>
    <string name="donate">Donate</string>
    <string name="select">Select</string>
    <string name="check" />
    <string name="select_photo">Select Photo</string>
    <string name="name">Full name</string>
    <string name="account_settings">Account settings</string>
    <string name="change_password">Change password</string>
    <string name="change_email">Change email</string>
    <string name="delete_account">Delete account</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="save">Save</string>
    <string name="new_email_address">New email address</string>
    <string name="update_email">Update E-mail</string>
    <string name="update_email_description">By clicking save, verification email will be sent to the new email address you provided.</string>
</resources>
